Updated README file

--- a/OpenGL_GettingStarted.vcxproj.filters
+++ b/OpenGL_GettingStarted.vcxproj.filters
@@ -51,5 +51,8 @@
     <None Include="vertex_shader_ex1.vs">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="vertex_shader_ex2.vs">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
