--- a/OpenGL_GettingStarted.vcxproj
+++ b/OpenGL_GettingStarted.vcxproj
@@ -158,6 +158,7 @@
     <None Include="fragment_shader.fs" />
     <None Include="vertex_shader.vs" />
     <None Include="vertex_shader_ex1.vs" />
+    <None Include="vertex_shader_ex2.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
