--- a/OpenGL_GettingStarted.vcxproj
+++ b/OpenGL_GettingStarted.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -150,9 +150,11 @@
     <ClInclude Include="Chapters\Exercises.h" />
     <ClInclude Include="Chapters\GettingStarted\HelloTriangle\HelloTriangle.h" />
     <ClInclude Include="Chapters\GettingStarted\Shaders\Shaders.h" />
+    <ClInclude Include="Chapters\GettingStarted\Textures\Textures.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Shaders\Shader.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="OpenGL_GettingStarted.rc" />
@@ -161,10 +163,15 @@
     <None Include="Shaders\Fragment\Getting started\fragment_shader.fs" />
     <None Include="Shaders\Fragment\Getting started\fragment_shader_ex3.fs" />
     <None Include="README.md" />
+    <None Include="Shaders\Fragment\Getting started\textures_fragment_shader.fs" />
+    <None Include="Shaders\Vertex\Getting started\textures_vertex_shader.vs" />
     <None Include="Shaders\Vertex\Getting started\vertex_shader.vs" />
     <None Include="Shaders\Vertex\Getting started\vertex_shader_ex1.vs" />
     <None Include="Shaders\Vertex\Getting started\vertex_shader_ex2.vs" />
     <None Include="Shaders\Vertex\Getting started\vertex_shader_ex3.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Textures\container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
