--- a/OpenGL_GettingStarted.vcxproj.filters
+++ b/OpenGL_GettingStarted.vcxproj.filters
@@ -77,6 +77,9 @@
     <None Include="Shaders\Vertex\Getting started\textures_vertex_shader.vs" />
     <None Include="Shaders\Fragment\Getting started\textures_fragment_shader.fs" />
     <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_multiple.fs" />
+    <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_multiple_reversed.fs" />
+    <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_multiple_styles.fs" />
+    <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_with_uniform.fs" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Textures\container.jpg">
