--- a/OpenGL_GettingStarted.vcxproj.filters
+++ b/OpenGL_GettingStarted.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Chapters\GettingStarted\Transformations\Transformations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="OpenGL_GettingStarted.rc">
@@ -80,6 +83,8 @@
     <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_multiple_reversed.fs" />
     <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_multiple_styles.fs" />
     <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_with_uniform.fs" />
+    <None Include="Shaders\Vertex\Getting started\transformations_vertex_shader.vs" />
+    <None Include="Shaders\Fragment\Getting started\transformations_fragment_shader.fs" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Textures\container.jpg">
