--- a/OpenGL_GettingStarted.vcxproj
+++ b/OpenGL_GettingStarted.vcxproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Chapters\Exercises.h" />
+    <ClInclude Include="Chapters\GettingStarted\CoordinateSystems\CoordinateSystems.h" />
     <ClInclude Include="Chapters\GettingStarted\HelloTriangle\HelloTriangle.h" />
     <ClInclude Include="Chapters\GettingStarted\Shaders\Shaders.h" />
     <ClInclude Include="Chapters\GettingStarted\Textures\Textures.h" />
@@ -161,6 +162,7 @@
     <ResourceCompile Include="OpenGL_GettingStarted.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\Fragment\Getting started\coordinate_systems_fragment_shader.fs" />
     <None Include="Shaders\Fragment\Getting started\fragment_shader.fs" />
     <None Include="Shaders\Fragment\Getting started\fragment_shader_ex3.fs" />
     <None Include="README.md" />
@@ -170,6 +172,7 @@
     <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_multiple_styles.fs" />
     <None Include="Shaders\Fragment\Getting started\textures_fragment_shader_with_uniform.fs" />
     <None Include="Shaders\Fragment\Getting started\transformations_fragment_shader.fs" />
+    <None Include="Shaders\Vertex\Getting started\coordinate_systems_vertex_shader.vs" />
     <None Include="Shaders\Vertex\Getting started\textures_vertex_shader.vs" />
     <None Include="Shaders\Vertex\Getting started\transformations_vertex_shader.vs" />
     <None Include="Shaders\Vertex\Getting started\vertex_shader.vs" />
